<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="background">background</string>
    <string name="coffee">Coffee</string>
    <string name="shop"><font color="#F1953e">    S</font>hop</string>
    <string name="get_started">Get Started</string>
    <string name="coffee_shop">Coffee <font color="#F1953e">S</font>hop</string>
    <string name="search_anything">Search Anything</string>
    <string name="category">Category</string>
    <string name="see_all">See all</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="add">add</string>
    <string name="special_coffee">Special Coffee</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="back">BACK</string>
    <string name="list">List</string>
    <string name="description">Description</string>
    <string name="coffe_size">Coffe Size</string>
    <string name="price">Price</string>
    <string name="star_number">Star Number</string>
    <string name="extra">Extra</string>
    <string name="add_cart">Add Cart</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="my_cart">My Cart</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="item_cart">Item Cart</string>
    <string name="close">Close</string>
    <string name="total">Total</string>
</resources>