<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBrown"
    tools:context=".ui.CartActivity">

    <ScrollView
        android:id="@+id/scrollViewActCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_cart"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/llBtnBackActCart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/llBtnBackActCart" />

                <LinearLayout
                    android:id="@+id/llBtnBackActCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/back"
                        android:src="@drawable/back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/back"
                        android:textColor="@color/white" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListItemActCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingBottom="270dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@color/orange"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollViewActCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvSubTotalActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPriceSubTotalActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvSubTotalActCart"
                app:layout_constraintBottom_toBottomOf="@+id/tvSubTotalActCart"/>

            <TextView
                android:id="@+id/tvDeliveryActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delivery"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubTotalActCart" />

            <TextView
                android:id="@+id/tvPriceDeliveryActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDeliveryActCart"
                app:layout_constraintBottom_toBottomOf="@+id/tvDeliveryActCart"/>

            <TextView
                android:id="@+id/tvTotalTaxActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_tax"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeliveryActCart" />

            <TextView
                android:id="@+id/tvPriceTotalTaxActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTotalTaxActCart"
                app:layout_constraintBottom_toBottomOf="@+id/tvTotalTaxActCart"/>

            <View
                android:id="@+id/viewLineAcrCart"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalTaxActCart"
                android:layout_marginTop="16dp"
                android:background="@color/darkBrown"
                />


            <TextView
                android:id="@+id/tvTotalActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewLineAcrCart" />

            <TextView
                android:id="@+id/tvPriceTotalActCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/darkBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTotalActCart"
                app:layout_constraintBottom_toBottomOf="@+id/tvTotalActCart"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmOrderActCart"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_dark_brown_bg"
            android:text="Confirm Order"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>