<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBrown"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/rainbow"
                android:text="@string/coffee_shop"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/edtSearchAnythingActMain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_brown_bg"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/search_anything"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/orange"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoryActMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clipToPadding="false"
                    android:minHeight="50dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="16dp"
                    />

                <ProgressBar
                    android:id="@+id/progressbarCategoryActMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="?android:attr/progressBarStyle"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>